--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="hero-animation" data-aos="fade-right">
                 <!-- Working Lottie for About -->
-                <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_m6zL3u.json" background="transparent" speed="1" style="width: 100%; height: 400px;" loop autoplay></lottie-player>
+                <lottie-player src="https://lottie.host/8287796d-74d3-4629-9e19-06488a096186/6Xm7t8z0E8.json" background="transparent" speed="1" style="width: 100%; height: 400px;" loop autoplay></lottie-player>
             </div>
             <div class="hero-text" data-aos="fade-left">
                 <h2 class="section-title" style="text-align: left;">আমার সম্পর্কে</h2>
@@ -192,7 +192,7 @@
                 <p>Backend এবং Frontend উভয় দিকেই শক্তিশালী ওয়েবসাইট সল্যুশন।</p>
             </div>
             <div class="glass-card" data-aos="fade-up" data-aos-delay="400">
-                <img src="https://images.unsplash.com/photo-1551288049-bbbda5366392?auto=format&fit=crop&w=500&q=60" class="service-img" alt="SEO">
+                <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&w=500&q=60" class="service-img" alt="SEO">
                 <h3>SEO অপ্টিমাইজেশন</h3>
                 <p>আপনার ওয়েবসাইটকে সার্চ ইঞ্জিনের প্রথম পাতায় নিয়ে আসার কাজ।</p>
             </div>
