--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="hero-animation" data-aos="fade-right">
                 <!-- Working Lottie for About -->
-                <lottie-player src="https://lottie.host/8287796d-74d3-4629-9e19-06488a096186/6Xm7t8z0E8.json" background="transparent" speed="1" style="width: 100%; height: 400px;" loop autoplay></lottie-player>
+                <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_iv4dsx3q.json" background="transparent" speed="1" style="width: 100%; height: 400px;" loop autoplay></lottie-player>
             </div>
             <div class="hero-text" data-aos="fade-left">
                 <h2 class="section-title" style="text-align: left;">আমার সম্পর্কে</h2>
