--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="container">
             <div class="hero-animation" data-aos="fade-right">
                 <!-- Working Lottie for About -->
-                <lottie-player src="https://assets5.lottiefiles.com/packages/lf20_iv4dsx3q.json" background="transparent" speed="1" style="width: 100%; height: 400px;" loop autoplay></lottie-player>
+                <lottie-player src="https://lottie.host/3e680d60-7a0e-4530-802c-7359d9f583f7/L9q2Ym4FvU.json" background="transparent" speed="1" style="width: 100%; height: 400px;" loop autoplay></lottie-player>
             </div>
             <div class="hero-text" data-aos="fade-left">
                 <h2 class="section-title" style="text-align: left;">আমার সম্পর্কে</h2>
