--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
         <h3>নূর আলম</h3>
         <p>আপনার স্বপ্নকে বাস্তবে রূপদান করাই আমার কাজ।</p>
         <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="mailto:nooralam@example.com"><i class="fas fa-envelope"></i></a>
+            <a href="https://www.facebook.com/mnalambd09"><i class="fab fa-facebook"></i></a>
+            <a href="https://github.com/mnalambd09"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/noor-alam-ab69b3153/"><i class="fab fa-linkedin"></i></a>
+            <a href="https://x.com/mnalambd09"><i class="fab fa-twitter"></i></a>
+            <a href="mailto:mnalambd09@gmail.com"><i class="fas fa-envelope"></i></a>
         </div>
         <p style="font-size: 0.8rem; opacity: 0.6; margin-top: 20px;">&copy; ২০২৪ নূর আলম | সর্বস্বত্ব সংরক্ষিত</p>
     </footer>
